--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-<head>
-<title>Web app with node.js</title>
-</head>
-<body>
-<h1>Web page by Hadj</h1>
-<img src="image.jpg" alt="Pyrenees-France">
-</body>
+    <head>
+        <title>Web Programming week 8 lab</title>
+    </head>
+    <body>
+        <h1>Node.js Lab</h1>
+        <img src="image.jpg" alt="catttt" width="500" height="500">
+    </body>
 </html>
