--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
  <button onclick="showVideos()">List videos</button> 
 <ul id="videos"></ul>
 </div>
-<img src="image.jpg" alt="Pyrenees-France">
+<img src="image.jpg" alt="catttt">
 
 </body>
 </html>
