--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<h1>Web page by Hadj</h1>
+<h1>Web page by Ishana</h1>
 <div>
  <button onclick="showVideos()">List videos</button> 
 <ul id="videos"></ul>
